--- a/luniloom-policy.html
+++ b/luniloom-policy.html
@@ -1,46 +1,131 @@
 <!DOCTYPE html>
-<html lang="zh-Hant">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luniloom 隱私權條款</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background-color: #f8f9fa;
-            margin: 0;
-            padding: 20px;
-        }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: #ffffff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        h1, h3 {
-            color: #2c3e50;
-        }
-        h1 {
-            border-bottom: 2px solid #e0e0e0;
-            padding-bottom: 10px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Luniloom Privacy Policy</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      line-height: 1.8;
+      color: #333;
+      background-color: #f8f9fa;
+      margin: 0;
+      padding: 20px;
+    }
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      background-color: #ffffff;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.08);
+    }
+    h1, h2, h3 {
+      color: #2c3e50;
+      margin-top: 1.5em;
+    }
+    h1 {
+      text-align: center;
+      font-size: 2em;
+      border-bottom: 2px solid #e0e0e0;
+      padding-bottom: 15px;
+      margin-bottom: 30px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    a {
+      color: #007bff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .toc {
+      background: #f1f3f5;
+      border: 1px solid #e0e0e0;
+      border-radius: 8px;
+      padding: 15px 20px;
+      margin-bottom: 30px;
+    }
+    .toc h2 {
+      font-size: 1.2em;
+      margin-top: 0;
+    }
+    footer {
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #555;
+      border-top: 1px solid #e0e0e0;
+      padding-top: 20px;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Luniloom 隱私權條款</h1>
+  <div class="container">
+    <h1>Luniloom Privacy Policy</h1>
 
-        <h3>1. 我們收集的資訊</h3>
-        <p>為了提供並優化我們的服務，我們會收集以下類型的資訊...</p>
-        <p><b>您直接提供的資訊：</b>balabala...</p>
+    <!-- Table of Contents -->
+    <div class="toc">
+      <h2>Table of Contents</h2>
+      <ul>
+        <li><a href="#collect">1. Information We Collect</a></li>
+        <li><a href="#use">2. How We Use Your Information</a></li>
+        <li><a href="#share">3. Sharing and Disclosure of Information</a></li>
+        <li><a href="#security">4. Data Security</a></li>
+        <li><a href="#rights">5. Your Rights</a></li>
+        <li><a href="#changes">6. Changes to This Policy</a></li>
+        <li><a href="#contact">7. Contact Us</a></li>
+      </ul>
+    </div>
 
-        <h3>2. 我們如何使用您的資訊</h3>
-        <p>我們將收集到的資訊用於以下目的...</p>
+    <h3 id="collect">1. Information We Collect</h3>
+    <p>To provide and improve our services, we may collect the following types of information:</p>
+    <ul>
+      <li><b>Information You Provide:</b> such as your name, email address, and account details.</li>
+      <li><b>Automatically Collected Information:</b> such as device type, IP address, and usage activity.</li>
+      <li><b>Information from Third Parties:</b> if you sign in through third-party services, we may receive necessary account data.</li>
+    </ul>
 
-        </div>
+    <h3 id="use">2. How We Use Your Information</h3>
+    <p>We use your information for the following purposes:</p>
+    <ul>
+      <li>To provide, maintain, and improve our services.</li>
+      <li>To notify you about new features, activities, or policy updates.</li>
+      <li>To prevent fraud, misuse, or other illegal activities.</li>
+      <li>To personalize your user experience based on your usage behavior.</li>
+    </ul>
+
+    <h3 id="share">3. Sharing and Disclosure of Information</h3>
+    <p>We will only share your information under the following circumstances:</p>
+    <ul>
+      <li>With your consent.</li>
+      <li>When required by law or government authorities.</li>
+      <li>With partners or service providers, limited to what is necessary for operations.</li>
+    </ul>
+
+    <h3 id="security">4. Data Security</h3>
+    <p>We implement reasonable technical and administrative measures to protect your information from unauthorized access, disclosure, or loss. However, please note that no method of online transmission or electronic storage is 100% secure.</p>
+
+    <h3 id="rights">5. Your Rights</h3>
+    <p>You have the right to:</p>
+    <ul>
+      <li>Access, review, or update your personal information.</li>
+      <li>Request deletion of your data.</li>
+      <li>Withdraw consent or restrict data processing.</li>
+    </ul>
+
+    <h3 id="changes">6. Changes to This Policy</h3>
+    <p>We may update this Privacy Policy from time to time. The latest version will be posted on this page. Significant changes will be communicated through appropriate channels.</p>
+
+    <h3 id="contact">7. Contact Us</h3>
+    <p>If you have any questions about this Privacy Policy, please contact us at:</p>
+    <p>Email: <a href="mailto:support@luniloom.ai">support@luniloom.ai</a></p>
+
+    <footer>
+      <p>&copy; 2025 Luniloom. All rights reserved.</p>
+    </footer>
+  </div>
 </body>
 </html>
