--- a/luniloom-policy.html
+++ b/luniloom-policy.html
@@ -121,7 +121,7 @@
 
     <h3 id="contact">7. Contact Us</h3>
     <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-    <p>Email: <a href="mailto:support@luniloom.ai">support@luniloom.ai</a></p>
+    <p>Email: <a href="lumotanai@gmail.com">lumotanai@gmail.com</a></p>
 
     <footer>
       <p>&copy; 2025 Luniloom. All rights reserved.</p>
