--- a/Luniloom-form.html
+++ b/Luniloom-form.html
@@ -137,7 +137,7 @@
 
     <h3 id="contact">16. Contact Us</h3>
     <p>If you have any questions about these Terms, please contact us at:</p>
-    <p>Email: <a href="mailto:support@luniloom.ai">support@luniloom.ai</a></p>
+    <p>Email: <a href="lumotanai@gmail.com">lumotanai@gmail.com</a></p>
 
     <footer>
       <p>&copy; 2025 Luniloom. All rights reserved.</p>
